Changes to folder structure and css

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 a{
     color: white;
     text-decoration: none;
+    cursor: pointer;
 }
 ul{
     list-style: none;
@@ -24,12 +25,7 @@ ul{
 }
 /* Nav */
 .main-nav{
-    padding: 70px 0;
     font-size: 15px;
-    margin-right: 50px;
-    margin-left: 350px ;
-    margin-top: 250px;
-
 }
 .main-nav ul{
     display: flex;
@@ -40,25 +36,22 @@ ul{
 .main-nav ul li a:hover{
     border-bottom: 2px solid #ff6600;
 }
+
+.Img-container{
+    max-width: 40%;
+}
 .logo{
-    width: 150px;  
-    margin-top: -400px;
-    margin-left: 70px ;
-    margin-bottom: 50px;
+    width: 100%;  
+}
+
+.quote-container{
+    max-width: 40%;
 }
 .quote{
-    width: 350px;
-    
-    margin-left: -22px ;
-    margin-bottom: 50px;
-    margin-top: -30px;
+    width: 100%;
 }
 .in{
     font-size: 30px;
-    margin-left: 152px ;
-    margin-bottom: 50px;
-    margin-top: -40px;
-    cursor: pointer;
 }
 .fot{
     font-size: 13px;
@@ -66,7 +59,15 @@ ul{
     display: flex;
    flex-direction: column;
    align-items: center;
-   margin-left: -550px;
-   margin-top: 30px;
     
+}
+@media only screen and (max-width: 600px) {
+    .main-nav ul{
+      display: block;
+    }
+  }
+  
+
+.fa-instagram:hover{
+    cursor: pointer;
 }
