--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ ul{
     width: 90%;
     max-width: 1100px;
     margin: auto;
+    padding: 2rem 0;
+}
+.primary-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 /* Nav */
 .main-nav{
@@ -38,7 +44,7 @@ ul{
 }
 
 .Img-container{
-    max-width: 40%;
+    max-width: 30%;
 }
 .logo{
     width: 100%;  
@@ -52,6 +58,7 @@ ul{
 }
 .in{
     font-size: 30px;
+    text-align: center;
 }
 .fot{
     font-size: 13px;
@@ -61,9 +68,16 @@ ul{
    align-items: center;
     
 }
-@media only screen and (max-width: 600px) {
-    .main-nav ul{
-      display: block;
+@media screen and (max-width: 600px) {
+    .quote-container{
+        max-width: 60%;
+    }
+
+    footer{
+        font-size: x-small;
+    }
+    a{
+        font-size: x-small;
     }
   }
   
