--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ ul{
    align-items: center;
     
 }
+footer{
+    position: fixed;
+    bottom: 0;
+}
 @media screen and (max-width: 600px) {
     .quote-container{
         max-width: 60%;
